# spark-ray-server

./: .gitignore  README.md  pyproject.toml
config/: capacity.example.toml  client.example.toml
docs/: CONSUMERS.md
planning/: ACCEPTANCE.md  DASHBOARD_SPEC.md  SPARK_ORCHESTRATOR_SPEC.md
skills/spark-jobs/: SKILL.md
src/spark_orchestrator/: __init__.py  cli.py  client.py  config.py  driver.py  gc.py  head.py  ledger.py  tunnel.py  worktree.py
src/spark_orchestrator/dashboard/: __init__.py  app.py  collect.py  tiers.py  views.py
src/spark_orchestrator/dashboard/static/: app.js  index.html
systemd/: spark-dashboard.service  spark-ray.service
tools/: acceptance.py  deploy.sh
tools/dashboard/: README.md
