[project]
name = "spark-orchestrator"
version = "0.1.0"
description = "Ray-based job scheduling layer for the DGX Spark (GB10)"
requires-python = ">=3.11"
# Intentionally dependency-free: the Mac client is stdlib-only; the server
# venv installs ray[default]==2.56.1 alongside (see README install steps).
dependencies = []

[project.scripts]
sparkctl = "spark_orchestrator.cli:main"
spark-ray-head = "spark_orchestrator.head:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_orchestrator"]
