[project]
name = "spark-orchestrator"
version = "0.1.0"
description = "Ray-based job scheduling layer for the DGX Spark (GB10)"
requires-python = ">=3.11"
# Intentionally dependency-free: the Mac client is stdlib-only; the server
# venv installs ray[default]==2.56.1 alongside (see README install steps).
dependencies = []

[project.scripts]
sparkctl = "spark_orchestrator.cli:main"
spark-ray-head = "spark_orchestrator.head:main"
spark-dashboard = "spark_orchestrator.dashboard.app:main"

[project.optional-dependencies]
# Installed only in the Spark server venv (the Mac client is stdlib-only).
dashboard = ["fastapi", "uvicorn", "psutil"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_orchestrator"]
